--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@arcgis/core": "^4.26.5",
     "@kjgl77/datav-vue3": "^1.5.0",
+    "axios": "^1.4.0",
     "echarts": "^5.4.2",
     "less": "^4.1.3",
     "normalize.css": "^8.0.1",
